@@ -476,7 +476,6 @@ Grouped in options:\
 [Le Journal du Net](https://www.journaldunet.com) -
 [Le Nouvel Economiste](https://www.lenouveleconomiste.fr) -
 [Le Parisien](https://www.leparisien.fr) -
-[Le Point](https://www.lepoint.fr) -
 [Le Télégramme](https://www.letelegramme.fr) -
 [Les Échos](https://www.lesechos.fr) -
 [Les Inrockuptibles](https://www.lesinrocks.com) -
