@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.2.3"
+  "version": "3.2.2.4"
 }
