@@ -194,6 +194,13 @@
     "block_regex": "\\.tinypass\\.com",
     "domain": "heraldscotland.com"
   },
+  "Hln.be": {
+    "add_ext_link": "div#remaining-paid-content|div.article__body",
+    "add_ext_link_type": "archive.is",
+    "allow_cookies": 1,
+    "block_regex": "temptation\\.hln\\.be\\/temptation\\.js/",
+    "domain": "hln.be"
+  },
   "Iflr.com": {
     "allow_cookies": 1,
     "domain": "iflr.com",
