@@ -380,7 +380,6 @@
     "*://*.lenouveleconomiste.fr/*",
     "*://*.lenouvelliste.ch/*",
     "*://*.leparisien.fr/*",
-    "*://*.lepoint.fr/*",
     "*://*.leprogres.fr/*",
     "*://*.lescienze.it/*",
     "*://*.lesechos.fr/*",
@@ -746,5 +745,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.2.3"
+  "version": "3.2.2.4"
 }
