@@ -1,4 +1,10 @@
 {
+  "Berlingske": {
+    "domain": "berlingske.dk",
+    "allow_cookies": 1,
+    "useragent": "bingbot",
+    "upd_version": "3.1.3.3"
+  },
   "Ftm.eu": {
     "domain": "ftm.eu",
     "allow_cookies": 1,
@@ -16,11 +22,23 @@
     "useragent": "googlebot",
     "upd_version": "3.2.1.1"
   },
+  "Haaretz English": {
+    "domain": "haaretz.com",
+    "allow_cookies": 1,
+    "useragent": "facebookbot",
+    "upd_version": "3.0.8.3"
+  },
   "Hindu Tamil Thisai": {
     "domain": "hindutamil.in",
     "allow_cookies": 1,
     "amp_redirect": "div.premium-class-bt",
     "new_site": 1
+  },
+  "La Vanguardia": {
+    "domain": "lavanguardia.com",
+    "allow_cookies": 1,
+    "block_regex": "\\/ev\\.lavanguardia\\.com",
+    "upd_version": "3.1.5.2"
   },
   "Le Télégramme": {
     "domain": "letelegramme.fr",
@@ -28,6 +46,12 @@
     "block_regex": "\\.poool\\.fr\\/",
     "cs_code": "[{\"cond\":\"div.tlg-paywalled\", \"rm_class\": \"tlg-paywalled\"}]",
     "upd_version": "3.2.1.1"
+  },
+  "Quora (regwall)": {
+    "domain": "quora.com",
+    "allow_cookies": 1,
+    "useragent": "googlebot",
+    "upd_version": "3.1.9.6"
   },
   "TechTarget Group": {
     "domain": "###_usa_techtarget",
@@ -46,11 +70,32 @@
     "ld_json": "data-hydrate[data-name='SubscriptionCard']|data-hydrate[data-name='InjectArticleDetailBlocks']",
     "upd_version": "3.2.0.4"
   },
+  "The Athletic": {
+    "domain": "###_usa_theathletic",
+    "group": [
+      "theathletic.com"
+    ],
+    "allow_cookies": 1,
+    "block_regex": "(\\/theathletic\\.com\\/_next\\/static\\/chunks\\/pages\\/article\\/.+\\.js|cdn\\.ampproject\\.org\\/v\\d\\/amp-(access|subscriptions)-.+\\.js)",
+    "upd_version": "3.2.1.1"
+  },
+  "The Atlantic": {
+    "domain": "theatlantic.com",
+    "block_regex": "cdn\\.theatlantic\\.com\\/_next\\/static\\/chunks\\/pages\\/.+\\/archive",
+    "remove_cookies_select_drop": ["articleViews"],
+    "upd_version": "3.0.3.8"
+  },
   "The New York Times": {
     "domain": "nytimes.com",
     "allow_cookies": 1,
     "block_regex": "(\\.nytimes\\.com\\/meter\\.js|mwcm\\.nyt\\.com\\/.+\\.js|cooking\\.nytimes\\.com\\/api\\/.+\\/access)",
     "useragent": "googlebot",
     "upd_version": "3.1.4.0"
+  },
+  "The Times Literary Supplement": {
+    "domain": "the-tls.co.uk",
+    "remove_cookies": 1,
+    "referer": "google",
+    "upd_version": "3.0.9.7"
   }
 }
