@@ -3,6 +3,7 @@ Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
 Add Groupe ESH Medias (ch)
+Remove LePoint.fr (fix obsolete)
 Fix Beobachter.ch & Handelszeitung.ch
 Fix Foreign Policy (Insider)
 
